--- a/index.html
+++ b/index.html
@@ -8,6 +8,314 @@
     <title>M2i</title>
   </head>
   <body>
-    <p class="test">je suis la pour tester mon css</p>
+    <div class="videoFond">
+      <video class="video" autoplay loop muted src="./video/home.mp4"></video>
+      <div class="fondVideo"></div>
+    </div>
+    <header>
+      <div class="navBar">
+        <div class="container">
+          <a href="https://www.m2iformation.fr"
+            ><img src="./logo/logoM2i.png" alt="logo"
+          /></a>
+          <p class="message">
+            Développez vos talents <br />Certifiez vos compétences
+          </p>
+
+          <ul class="lienSite">
+            <li><a class="lienNav" href="#">FORMATIONS</a></li>
+            <li><a class="lienNav" href="#">DIPLOMES ET CERTIFICATIONS</a></li>
+            <li><a class="lienNav" href="#">MODALITES</a></li>
+            <li><a class="lienNav" href="#">FINANCEMENTS</a></li>
+            <li><a class="lienNav" href="#">CPF</a></li>
+            <li><a class="lienNav" href="#">POE</a></li>
+            <li><a class="lienNav" href="#">FNE</a></li>
+          </ul>
+
+          <div>
+            <ul class="logoDroite">
+              <li>
+                <a href="https://www.m2iformation.fr">
+                  <img src="./logo/magnifying-glass.png" alt="search"
+                /></a>
+              </li>
+
+              <li class="large">|</li>
+
+              <li>
+                <a href="https://www.m2iformation.fr/mon-compte/">
+                  <img src="./logo/compte.png" alt="connexion"
+                /></a>
+              </li>
+
+              <li class="contactIcon">
+                <a href="https://www.m2iformation.fr/contact/">
+                  <img src="./logo/contact.png" alt="contact"
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="pageOneMiddle">
+      <p>
+        Bienvenue chez le leader de la formation IT, Digital et Management en
+        France
+      </p>
+      <h2 class="title"><strong>Trouver Votre formation</strong></h2>
+      <div class="search">
+        <input
+          type="text"
+          id="name"
+          name="name"
+          required
+          placeholder="Photoshop exppertise"
+        />
+        <ul>
+                 <li class="contenant" >
+                <a  href="https://www.m2iformation.fr">
+                  <p class="shearch2"></p>
+                  <img  class= "shearch2 placeSearch" src="./logo/magnifying-glass.png" alt="search"
+                /></a>
+              </li>
+        </ul>
+       </div>
+        <p class="example">Ex. : Excel, Word, Photoshop, Java, Agile...</p>
+
+    </section>
+
+    <section class="noteAvies">
+      <p>4,6/5</p>
+      <img class="sizeEtoile" src="./logo/etoile.png" alt="etoile" />
+    </section>
+    <p class="avis">Avis Vérifiés</p>
+
+    <div class="page2">
+      <p class="titleCenter">
+        Découvrez nos formations 2022 diponible <br />
+        en présentiel ou à distance
+      </p>
+
+      <div>
+        <ul class="cards">
+          <li class="formatCard">
+            <ul>
+              Formations en
+              <br />
+              informatique
+            </ul>
+            <a href="https://www.m2iformation.fr/formations/informatique/"
+              ><img
+                class="sizePicture"
+                src="./photo/peopleLunette.jpg"
+                alt="logo"
+            /></a>
+          </li>
+          <li class="formatCard">
+            <ul>
+              Formations en
+              <br />
+              bureautique
+            </ul>
+            <a href="https://www.m2iformation.fr/formations/bureautique/"
+              ><img class="sizePicture" src="./photo/andrea.jpg" alt="logo"
+            /></a>
+          </li>
+          <li class="formatCard">
+            <ul>
+              Formations en
+              <br />
+              management
+            </ul>
+            <a href="https://www.m2iformation.fr/formations/management/"
+              ><img class="sizePicture" src="./photo/management.jpg" alt="logo"
+            /></a>
+          </li>
+          <li class="formatCard">
+            <ul>
+              Formations en digital
+              <br />
+              && multimédia
+            </ul>
+            <a href="https://www.m2iformation.fr/formations/multimedia/"
+              ><img class="sizePicture" src="./photo/multimedia.jpg" alt="logo"
+            /></a>
+          </li>
+        </ul>
+      </div>
+
+
+      <div class="page3">
+      <p class="titleCenter3">
+        Financer votre formation
+      </p>
+        <p class="sousTitle3">
+        Nos conseillers sont là pour vous aider à activer vos leviers de financement
+      </p>
+      <div>
+        <ul class="cards">
+          <li class="formatCard3">
+            <p>entreprises</p>
+            <ul>
+              Fond national
+              <br />
+              pour l'emploi (FNE)
+  
+            </ul>
+            <a href="https://www.m2iformation.fr/formations/informatique/"
+              ><img
+                class="sizePicture3"
+                src="./photo/peopleLunette.jpg"
+                alt="logo"
+            /></a>
+          </li>
+
+          <li class="formatCard3">
+            <p>particulier</p>
+            <ul>
+              Compte personnel
+              <br />
+              de formation (CPF)
+  
+            </ul>
+            <a href="https://www.m2iformation.fr/formations/bureautique/"
+              ><img class="sizePicture3" src="./photo/andrea.jpg" alt="logo"
+            /></a>
+          </li>
+
+          <li class="formatCard3">
+            <p>entreprises</p>
+            <ul>
+              Actions collectives &
+              <br />
+              négociées par <br>
+              les OPCO
+            </ul>
+            <a href="https://www.m2iformation.fr/formations/management/"
+              ><img class="sizePicture3" src="./photo/management.jpg" alt="logo"
+            /></a>
+          </li>
+
+          <li class="formatCard3">
+            <p>entreprises && particulier</p>
+            <ul>
+              Préparation <br> opérationnelle <br> à l'emploi (POE)
+            </ul>
+            <a href="https://www.m2iformation.fr/formations/multimedia/"
+              ><img class="sizePicture3" src="./photo/multimedia.jpg" alt="logo"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="page4">
+      <div >
+        <img class="img1Page4" src="./photo/transformation-digitale.png" alt="transformation-digitale">
+      </div>
+      <div >
+        <p class="imPage4">Transformation digitale</p>
+        <div>
+        <p class="taille">
+          Soyez acteur de la transformation digitale
+        </p>
+        </div>
+        <div >
+          <ul class="format">
+            <li  >
+              <li><a href="https://www.m2iformation.fr/dossier/transformation-digitale/&cat=gouvernance#formations">Gouvernance</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/transformation-digitale/&cat=culture-digitale#formations">Culture digitale</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/transformation-digitale/&cat=marketing-digital#formations">Marketin digital</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/transformation-digitale/&cat=communication-digitale#formations">Communication digital</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/transformation-digitale/&cat=usages-et-methodologies#formations">Usage et méthodologie</a></li>
+            </li>
+          </ul>
+        </div>
+         <div class="texteDescriptif">
+        <p>La digitalisation est un phénomène transverse qui touche <br> 
+            l'ensemble des services et départements de l'entreprise. <br>
+            C'est aussi une aventure qui doit s'intégrer dans une stratégie <br>
+            globale. Découvrez notre offre de formation qui répond aux <br>
+            grandes interrogations de l'entreprise digitale.</p>
+      </div>
+          <div class="fullControl" >
+          <ul class="buttonPlusT">
+            <li >
+              <li><img class="buttonPlus" src="./logo/next.png" alt="logo arrow"></li>
+            </li>
+            <li>
+              <li>En savoir plus</li>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="page5">
+      <div class="testFlex" >
+        <p class="imPage5">Déploiements stratégiques</p>
+        <div>
+        <p class="taille">
+          Gagnez en agilité
+        </p>
+        </div>
+        <div >
+          <ul class="formatDroite">
+            <li  >
+              <li><a href="https://www.m2iformation.fr/dossier/deploiements-strategiques/&cat=microsoft-dynamics-crm#formations">Microsoft Dynamics CRM</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/deploiements-strategiques/&cat=sap#formations">SAP</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/deploiements-strategiques/&cat=salesforce#formations">Saleforce</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/deploiements-strategiques/&cat=office-365#formations">Office 365</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/deploiements-strategiques/&cat=microsoft-365#formations">Microsoft 365</a></li>
+            </li>
+          </ul>
+        </div>
+         <div class="texteDescriptif">
+        <p>La transformation numérique des entreprises repose sur <br>
+           de nouveaux outils stratégiques qui entraînent une mutation<br>
+            profonde des usages et modes de travail. Leur déploiement <br>
+            s'inscrit dans une logique de compétitivité qui modifie <br>
+            les usages et favorise le travail collaboratif.
+        </p>
+          <div class="fullControl" >
+          <ul class="buttonPlusT">
+            <li >
+              <li><img class="buttonPlus" src="./logo/next.png" alt="logo arrow"></li>
+            </li>
+            <li>
+              <li>En savoir plus</li>
+            </li>
+          </ul>
+        </div>
+        </div>
+        </div>
+         <div class="flexCenter">
+        <img class="img1Page5" src="./photo/deploiements-strategiques.png" alt="">
+      </div>
+      
+
+      </div>
+      
+
+
+
   </body>
 </html>
