--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>M2i</title>
   </head>
   <body>
+       <!---------------------------------------------------------->
     <div class="videoFond">
       <video class="video" autoplay loop muted src="./video/home.mp4"></video>
       <div class="fondVideo"></div>
@@ -91,7 +92,7 @@
       <img class="sizeEtoile" src="./logo/etoile.png" alt="etoile" />
     </section>
     <p class="avis">Avis Vérifiés</p>
-
+   <!---------------------------------------------------------->
     <div class="page2">
       <p class="titleCenter">
         Découvrez nos formations 2022 diponible <br />
@@ -146,7 +147,7 @@
         </ul>
       </div>
 
-
+   <!---------------------------------------------------------->
       <div class="page3">
       <p class="titleCenter3">
         Financer votre formation
@@ -210,7 +211,7 @@
         </ul>
       </div>
     </div>
-
+   <!---------------------------------------------------------->
     <div class="page4">
       <div >
         <img class="img1Page4" src="./photo/transformation-digitale.png" alt="transformation-digitale">
@@ -260,7 +261,7 @@
         </div>
       </div>
     </div>
-
+   <!---------------------------------------------------------->
     <div class="page5">
       <div class="testFlex" >
         <p class="imPage5">Déploiements stratégiques</p>
@@ -310,11 +311,57 @@
          <div class="flexCenter">
         <img class="img1Page5" src="./photo/deploiements-strategiques.png" alt="">
       </div>
-      
-
       </div>
-      
-
+      <!---------------------------------------------------------->
+    <div class="page4">
+      <div >
+        <img class="img1Page6" src="./photo/bulle-innovation.png" alt="transformation-digitale">
+      </div>
+      <div >
+        <p class="imPage4">Bulle innovation</p>
+        <div>
+        <p class="taille">
+          Redonnez le sourire à votre organisation
+        </p>
+        </div>
+        <div >
+          <ul class="format">
+            <li  >
+              <li><a href="https://www.m2iformation.fr/dossier/bulle-innovation/#intelligence-collective">Intelligence collective</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/bulle-innovation/#accompagnement-au-changement">Accompagnement au changement</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/bulle-innovation/#qvt">QVT</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/bulle-innovation/#talents">Talents</a></li>
+            </li>
+          </ul>
+        </div>
+         <div class="texteDescriptif">
+          <p>
+            laBulleInnovation© est un pôle dédié à la transformation et aux<br>
+             changements que vivent les organisations. Notre approche <br>
+             pédagogique consiste à faire émerger de nouvelles <br>
+              compétences émotionnelles et comportementales chez <br>
+              les collaborateurs, tout en respectant les singularités<br>
+               et le rythme de progression de chacun.
+          </p>
+      </div>
+          <div class="fullControl" >
+          <ul class="buttonPlusT">
+            <li >
+              <li><img class="buttonPlus" src="./logo/next.png" alt="logo arrow"></li>
+            </li>
+            <li>
+              <li>En savoir plus</li>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
 
   </body>
