--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
       </div>
       </div>
       <!---------------------------------------------------------->
+      <!--changer la marge entre cette page et celle du dessus-->
     <div class="page4">
       <div >
         <img class="img1Page6" src="./photo/bulle-innovation.png" alt="transformation-digitale">
@@ -362,7 +363,53 @@
         </div>
       </div>
     </div>
-
-
+<!-------------------------page7--------------------------------->
+    <div class="page7">
+      <div class="testFlex" >
+        <p class="imPage5">Cybersécurité</p>
+        <div>
+        <p class="taille">
+          Sécurisez votre patrimoine numérique
+        </p>
+        </div>
+        <div >
+          <ul class="formatDroite">
+            <li  >
+              <li><a href="https://www.m2iformation.fr/dossier/cybersecurite/&cat=securite-offensive#formations">Sécurité offensive</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/cybersecurite/&cat=securite-defensive#formations">Sécurité défensive</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/cybersecurite/&cat=gouvernance-et-juridique#formations">Gouvernance et juridique</a></li>
+            </li>
+            <li>
+              <li><a href="https://www.m2iformation.fr/dossier/cybersecurite/&cat=offre-editeurs#formations">Offre éditeurs</a></li>
+            </li>
+          </ul>
+        </div>
+         <div class="texteDescriptif">
+        <p>
+          Alors que les volumes de données et les équipements <br>
+          connectés sont l'objet d'une croissance exponentielle,<br>
+          la Cybersécurité est plus que jamais un enjeu stratégique,<br>
+          en lien étroit avec la performance économique <br>des organisations.
+        </p>
+          <div class="fullControl" >
+          <ul class="buttonPlusT">
+            <li >
+              <li><img class="buttonPlus" src="./logo/next.png" alt="logo arrow"></li>
+            </li>
+            <li>
+              <li>En savoir plus</li>
+            </li>
+          </ul>
+        </div>
+        </div>
+        </div>
+         <div class="flexCenter">
+        <img class="img1Page5" src="./photo/cybersecurite (1).png" alt="">
+      </div>
+      </div>
   </body>
 </html>
