--- a/index.html
+++ b/index.html
@@ -411,5 +411,41 @@
         <img class="img1Page5" src="./photo/cybersecurite (1).png" alt="">
       </div>
       </div>
+
+      <!-------------------------page8--------------------------------->
+
+      <div >
+        <ul class="page8">
+          <li class="colorTaille1" >
+                  <div class="testFlex" >
+        <p class="imPage8">Centre Ouest</p>
+        <div>
+        <p class="taille8">
+         Concepteur(trice) Développeur'se) d'Application
+        </p>
+        <img class="sizePicture8"  src="./photo/dev1.jpeg" alt="">
+        <p class="texteEnDessous">Du 15 novembre 2021 au 17 octobre 2022 - 22 jours (1540h00)</p>
+
+        </div>
+          </li>
+          <li class="colorTaille2" >
+                  <div class="testFlex" >
+        <p class="imPage8">Nord Ouest</p>
+        <div>
+        <p class="taille8">
+          Consultant(e) Business Intelligence / Data
+        </p>
+        <img class="sizePicture8"  src="./photo/dev.jpeg" alt="">
+        <p class="texteEnDessous">Du 18 novembre au 11 février 2022 - 57 jours (399h00)</p>
+
+        </div>
+          </li>
+          <li class="colorTaille3" >
+            <img class="logoPlus" src="./logo/plus-symbol-button.png" alt="logo plus">
+          </li>
+        </ul>
+      </div>
+
+      
   </body>
 </html>
