--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </ul>
       </div>
 
-   <!---------------------------------------------------------->
+   <!----------------------------page3------------------------->
       <div class="page3">
       <p class="titleCenter3">
         Financer votre formation
@@ -401,6 +401,7 @@
               <li><img class="buttonPlus" src="./logo/next.png" alt="logo arrow"></li>
             </li>
             <li>
+
               <li>En savoir plus</li>
             </li>
           </ul>
@@ -417,7 +418,7 @@
       <div >
         <ul class="page8">
           <li class="colorTaille1" >
-                  <div class="testFlex" >
+           <div class="testFlex" >
         <p class="imPage8">Centre Ouest</p>
         <div>
         <p class="taille8">
@@ -445,7 +446,96 @@
           </li>
         </ul>
       </div>
-
+<!-------------------------page9--------------------------------->
+<div>
+    <ul class="page9">
+      <li class="flex1Page9">
+        <p>L'univers M2i</p>
+      </li>
+      <li class="flex2Page9">
+        <img src="./logo/ordinateur.png" alt="chapeau">
+        <p class="titlePage9">
+          Choisissez <br> votre modalité
+        </p>
+        <div class="texteDescriptifp9">
+          <p >
+            Présentiel, Digital Learning, <br>
+             classe virtuelle ou <br>
+              blended-learning : <br>
+            choisissez une formation  <br>
+             sans contraintes et <br>
+              à votre mesure.
+          </p>
+        </div>
+                  <div class="fullControl" >
+          <ul class="buttonPlusT">
+            <li >
+              <li><img class="buttonPlus" src="./logo/next.png" alt="logo arrow"></li>
+            </li>
+            <li>
+              <li>En savoir plus</li>
+            </li>
+          </ul>
+        </div>
+      </li>
       
+           <li class="flex2Page9">
+        <img src="./logo/badge-ruban.png" alt="ruban">
+        <p class="titlePage9">
+          Validez une<br>  certification 
+        </p>
+        <div class="texteDescriptifp92">
+          <p >
+          Obtenez un diplôme ou <br>
+          une certification pour <br>
+          valoriser votre expérience <br>
+          professionnelle <br>
+          et vos compétences.
+          </p>
+        </div>
+           <div class="fullControl" >
+          <ul class="buttonPlusT">
+            <li >
+              <li><img class="buttonPlus" src="./logo/next.png" alt="logo arrow"></li>
+            </li>
+            <li>
+              <li>En savoir plus</li>
+            </li>
+          </ul>
+        </div>
+      </li>
+
+           <li class="flex2Page9">
+        <img src="./logo/check.png">
+        <p class="titlePage9">
+          Testez  <br>vos connaissances 
+        </p>
+        <div class="texteDescriptifp9">
+          <p >
+
+            Nos quizz vous guident <br>
+             dans le choix de formation.<br>
+              Évaluez votre niveau <br>
+              de pré-requis pour <br>
+              découvrir la formation <br>
+              faite pour vous.
+
+          </p>
+        </div>
+                  <div class="fullControl" >
+          <ul class="buttonPlusT">
+            <li >
+              <li><img class="buttonPlus" src="./logo/next.png" alt="logo arrow"></li>
+            </li>
+            <li>
+              <li>En savoir plus</li>
+            </li>
+          </ul>
+        </div>
+      </li>
+      
+    </ul>
+</div>
+
   </body>
 </html>
